--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="container-fluid">
       <div class="row" style="height:100vh;">
-        <div class="col-6 p-lg-3 mt-5 col-centered">
+        <div class="col-10 p-lg-3 mt-5 col-centered">
           <h1 class="font-weight-extrabold">Velkommen</h1>
           <p class="lead mb-5 text-secondary">
             Vælg hvad du vil søge efter i Rigsarkivet.
@@ -66,13 +66,13 @@
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    id="heuristiskeenhed-tab"
+                    id="heuristiskenhed-tab"
                     data-toggle="tab"
-                    href="#heuristiskeenhed"
+                    href="#heuristiskenhed"
                     role="tab"
-                    aria-controls="heuristiskeenhed"
+                    aria-controls="heuristiskenhed"
                     href="#"
-                    >Heuristiske enhed</a
+                    >Heuristisk enhed</a
                   >
                 </li>
                 <li class="nav-item">
@@ -112,79 +112,93 @@
                   >
                 </li>
               </ul>
-              <div class="tab-content p-lg-3" id="myTabContent">
+              <div class="tab-content p-lg-3 mt-4" id="myTabContent">
                 <div
-                  class="tab-pane show active p-lg-3"
+                  class="tab-pane show active"
                   id="arkivskaber"
                   role="tabpanel"
                   aria-labelledby="arkivskaber-tab"
                 >
-                  <form>
+                  <form action="/arkivskaber.html">
                     <div class="container-fluid">
                       <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-4">
                           <label for="navn">Navn</label>
                           <input
                             type="text"
                             class="form-control form-control-lg"
                             id="navn"
                           />
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-12 mb-4">
                           <small>
                             <a
                               data-toggle="collapse"
-                              data-target="#demo"
-                              href="#"
+                              href="#collapseProviens"
+                              role="button"
+                              aria-expanded="false"
+                              aria-controls="collapseProviens"
                             >
-                              Avanceret søgning
-                            </a>
+                              Søg på Proviens-nr.</a
+                            >
                           </small>
                         </div>
+                        <div class="col-sm-3">
+                          <label for="praefiks">Præfiks</label>
+                          <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="praefiks"
+                          />
+                        </div>
+                        <div class="col-sm-2">
+                          <label for="til">Til</label>
+                          <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="til"
+                          />
+                        </div>
+                        <div class="col-sm-2">
+                          <label for="fra">Fra</label>
+                          <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="fra"
+                          />
+                        </div>
+                        <div class="col-sm-1 mt-4">
+                          <button
+                            type="submit"
+                            class="btn btn-lg btn-primary search"
+                          >
+                            Søg
+                          </button>
+                        </div>
                       </div>
-                      <div id="demo" class="collapse">
-                        <div class="row">
-                          <div class="col-sm-12">
-                            <label for="praefiks">Præfiks</label>
-                            <input
-                              type="text"
-                              class="form-control mb-3"
-                              id="praefiks"
-                            />
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-sm-6 mb-3">
-                            <label for="fra">Fra</label>
-                            <input type="text" class="form-control" id="fra" />
-                          </div>
-                          <div class="col-sm-6 mb-3">
-                            <label for="til">Til</label>
-                            <input type="text" class="form-control" id="til" />
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-sm-12 mb-3">
-                            <label for="proviensnr">Proviens-nr.</label>
-                            <input type="text" class="form-control" id="enr" />
-                          </div>
+                      <div class="row collapse" id="collapseProviens">
+                        <div class="col-sm-4 mb-3">
+                          <label for="proviensnr">Proviens-nr.</label>
+                          <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="enr"
+                          />
                         </div>
                       </div>
-                      <button type="submit" class="btn btn-lg btn-primary">
-                        Søg
-                      </button>
                     </div>
                   </form>
-                  <div class="bg-white p-lg-3 mt-5">
-                    hello
+                  <div class="m-3 mt-5">
+                    <button
+                      type="button"
+                      class="btn btn-outline-primary btn-sm"
+                    >
+                      + Opret ny arkivskaber
+                    </button>
                   </div>
                 </div>
 
                 <div
                   class="tab-pane p-lg-3"
-                  id="heuristiskeenhed"
+                  id="heuristiskenhed"
                   role="tabpanel"
                   aria-labelledby="heuristiskeenhed-tab"
                 >
@@ -294,20 +308,48 @@
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-6 mb-3">
-                          <label for="formaal">Formål</label>
+                          <label for="arbejdsopgave">Arbejdsopgave</label>
                           <input
                             type="text"
                             class="form-control form-control-lg"
-                            id="formaal"
+                            id="arbejdsopgave"
                           />
                         </div>
                         <div class="col-sm-6 mb-3">
-                          <label for="medie">Medie</label>
+                          <label for="navn">Navn</label>
                           <input
                             type="text"
                             class="form-control form-control-lg"
-                            id="medie"
+                            id="navn"
                           />
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-6 mb-3">
+                          <label for="praefiks">Præfiks</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="praefiks"
+                          />
+                        </div>
+                        <div class="col-sm-6 mb-3">
+                          <label for="proviensnr">Proviens-nr</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="proviensnr"
+                          />
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-6 mb-3">
+                          <label for="fra">Fra</label>
+                          <input type="text" class="form-control" id="fra" />
+                        </div>
+                        <div class="col-sm-6 mb-3">
+                          <label for="til">Til</label>
+                          <input type="text" class="form-control" id="til" />
                         </div>
                       </div>
                       <button type="submit" class="btn btn-primary btn-lg">
