--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </ul>
           <div class="card special bg-white">
             <div class="card-body">
-              <div class="tab-content m-5" id="myTabContent">
+              <div class="tab-content m-4" id="myTabContent">
                 <div
                   class="tab-pane show active"
                   id="arkivskaber"
@@ -190,6 +190,8 @@
                         <button
                           type="button"
                           class="btn btn-outline-primary btn-sm"
+                          data-toggle="modal"
+                          data-target="#opretArkivskaber"
                         >
                           + Ny arkivskaber
                         </button>
@@ -491,6 +493,41 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="opretArkivskaber"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Opret Arkivskaber
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Opret ny ting
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">
+              Opret
+            </button>
           </div>
         </div>
       </div>
