--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                           />
                         </div>
                         <div class="col-sm-6">
-                          <label for="proviensnr">Proviens-nr.</label>
+                          <label for="proveniensnr">Proveniens nr.</label>
                           <input
                             type="text"
                             class="form-control bg-light"
-                            id="enr"
+                            id="proveniensnr"
                           />
                         </div>
                       </div>
